feat: implement server-sent events (SSE) for workflow updates and add heartbeat mechanism